# Suomenlinna-Traffic-Predictor

./: README.md  index.py  pyproject.toml  tasks.py
data/: .~lock.weather-data.xlsx#  HSL-data-cleaned.csv  HSL-data-cleaning.py  HSL-data.py  OPTIMIZEDnegmodel2withclass.py  combined-data.csv  combining-data.py  csv-to-xlxs.py  hslcleaning.py  modelexample.py  negmodel.py  negmodel2withclass.py  newmod.py  newmodel.py  weather-data-cleaned.csv  weather-data-cleaning.py  weather-data.csv  weather-data.xlsx
data/models-gabi/: negmodel2.py
data/previous-models/: model.py  negmodel2.py  negmodel2withclass.py  newmod-gabi.py  newmod-gabi2.py  newmod.py
src/: build.py  index.py  mainpage.py
src/UI/: ui.py
src/ui/: mainpage.py  resultpage.py  ui.py
